@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2015-08-01:
+- Added discusage in menutimers, made ist optional
+
 2015-07-31:
 - Switched vdrusagestring to graphical usedpercent
 
